Fixed scrollbar issues

--- a/journal/journal.css
+++ b/journal/journal.css
@@ -173,11 +173,10 @@ canvas {
    width: 25px;
    height: 25px;
    padding: 0;
+   background-color: #F0F0F0;
 }
-.ftools.alt button { background-color: #e0ecf0; /*#E8E8E8;*/ }
 
 button[data-selected] { background-color: skyblue !important; }
-/*.alt button[data-selected] { background-color: blue !important; }*/
 
 #palette button {
    padding: 2px;
@@ -192,7 +191,7 @@ button[data-selected] { background-color: skyblue !important; }
 
 #webcontrols {
    flex: auto;
-   font-size: 14px; /*0.8em;*/
+   font-size: 13px; /*0.8em;*/
    padding: 0.2em 0;
 }
 
@@ -207,7 +206,7 @@ input[type="checkbox"] { margin-right: 0.2em; }
 
 #pagenumberdisplay {
    font-family: monospace;
-   font-size: 1.1em;
+   font-size: 1.15em;
    background: #F7F7F7;
    border-top: 1px solid #AAA;
 }
